Fixing more table alignment

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2435,6 +2435,6 @@ video {
 /* 18. Tables
 /* ---------------------------------------------------------- */
 
-tbody > tr {
+table * {
     vertical-align: middle;
 }
